Updates from Overleaf

--- a/LP_Avancement.tex
+++ b/LP_Avancement.tex
@@ -28,7 +28,7 @@
   \hline
   \textbf{Conversion de puissance électromécanique} p\pageref{LP_ConversionPuissance} & \textcolor{green}{Etude MCC (résistance, rendement, ...)} & \textcolor{yellow}{\textbf{60\%}} & Finir moteur synchrone\\
   \hline 
-  \textbf{Induction électromagnétique} p\pageref{LP_Induction} & Mesure inductance circuit LC + aimant & \textcolor{red}{\textbf{0\%}} & Leçon Lydia assez complet\\
+  \textbf{Induction électromagnétique} p\pageref{LP_Induction} & \textcolor{green}{Mesure inductance circuit RL} & \textcolor{red}{\textbf{0\%}} & Leçon Lydia assez complet\\
   \hline
   \textbf{Rétroaction et oscillations} p\pageref{LP_RetroactionOscillation} & \textcolor{red}{Quali : MCC asservi.}, \textcolor{yellow}{Quanti : Pont de Wien} & \textcolor{red}{\textbf{0\%}} & \\
   \hline
@@ -40,23 +40,23 @@
 \begin{center}
 \begin{tabularx}{\paperwidth-2cm}{| X | X | c | X |}
 \hline
-  \textbf{Ondes progressives, ondes stationnaires} p\pageref{LP_OndesProgressives}~& \textcolor{red}{Corde Melde - étude câble coax} & \textcolor{orange}{\textbf{40\%}} & Faire partie onde progressive et onde stationnaire \\
+  \textbf{Ondes progressives, ondes stationnaires} p\pageref{LP_OndesProgressives}~& \textcolor{green}{vitesse de l'onde dans un câble coaxial} & \textcolor{orange}{\textbf{40\%}} & Faire partie onde progressive et onde stationnaire \\
   \hline
   \textbf{Ondes acoustiques} p\pageref{LP_OndeAcoustique}~& ?? Mesure $c_{air}$ piézo ?? & \textcolor{red}{\textbf{0\%}} &  \\
   \hline
   \textbf{Propagation guidée des ondes} p\pageref{LP_PropagationGuidee} & \textcolor{green}{Quali : piezo + tube}, \textcolor{green}{Quanti : guide d'onde centi}& \textcolor{green}{\textbf{80\%}} & Ouverture à finir + Pertes et ROS à regarder. \\
   \hline
-  \textbf{Microscopies optiques} p\pageref{LP_Microscopie}~& \textcolor{green}{Microscope maison, mesure grandissement}~& \textcolor{red}{\textbf{0\%}} &  \\
+  \textbf{Microscopies optiques} p\pageref{LP_Microscopie}~& \textcolor{green}{Microscope maison, mesure grandissement}~& \textcolor{green}{\textbf{70\%}} & Rajouter profondeur de champ, être plus synthétique pour réussir à parler de contraste de phase ou fluorescence \\
   \hline
-  \textbf{Interférences à deux ondes en optique} p\pageref{LP_InterferencesDeuxOndes}~& Mesure largeur fentes d'Young & \textcolor{orange}{\textbf{40\%}} & Plan à revoir en détail\\
+  \textbf{Interférences à deux ondes en optique} p\pageref{LP_InterferencesDeuxOndes}~& \textcolor{green}{Mesure largeur fentes d'Young barette CCD} & \textcolor{orange}{\textbf{40\%}} & Plan à revoir en détail\\
   \hline
   \textbf{Interférométrie à division d'amplitude} p\pageref{LP_DivisionAmplitude} & \textcolor{green}{Michelson : doublet sodium} & \textcolor{green}{\textbf{100\%}} & A revoir vite fait coin d'air \\
   \hline
-  \textbf{Diffraction de Fraunhofer} p\pageref{LP_DiffractionFraunhofer} & \textcolor{red}{Diffraction par une fente+CCD-MHTEX/Filtrage spatial }& \textcolor{orange}{\textbf{30\%}} &  \\
+  \textbf{Diffraction de Fraunhofer} p\pageref{LP_DiffractionFraunhofer} & \textcolor{green}{Diffraction par une fente+CCD-MHTEX} \textcolor{red}{Filtrage spatial} & \textcolor{orange}{\textbf{30\%}} &  \\
   \hline
   \textbf{Diffraction par des structures périodiques} p\pageref{LP_DiffractionPeriodique} & \textcolor{red}{Diffraction par un réseau} & \textcolor{red}{\textbf{0\%}} &  \\
   \hline
-  \textbf{Absorption et émission de la lumière} p\pageref{LP_Absorption} & \textcolor{yellow}{Corps noir ?} & \textcolor{red}{\textbf{0\%}} & Leçon Elric pas mal \\
+  \textbf{Absorption et émission de la lumière} p\pageref{LP_Absorption} & \textcolor{green}{Emission/absorption rhodamine} \textcolor{red}{Spectre emission lampe à vapeur de mercure + réseau} & \textcolor{red}{\textbf{0\%}} & Leçon Elric pas mal \\
   \hline
   \hline
   \textbf{Propriétés macroscopiques des corps ferromagnétiques } p\pageref{LP_Ferromagnetisme} & \textcolor{green}{Cycle hystérésis transfo} & \textcolor{green}{\textbf{90\%}} & Mettre en relief appli ferro durs/doux + démo confinement lignes de champ slides \\
