--- a/LP_Microscopie/LP_Microscospie.tex
+++ b/LP_Microscopie/LP_Microscospie.tex
@@ -17,9 +17,9 @@
   \hline 
   Titre & Auteurs & Editeur (année) & ISBN \\
   \hline
-  Slide de cours & Agnès Maître & Site Montrouge & \\
+  Les instruments d'optique & Luc Detwiller & Ellipses (1997) & \\
   \hline 
-  \url{http://ressources.agreg.phys.ens.fr/media/ressources/RessourceFichiers/11-Maxime_Dahan_-_Microscopie_pour_la_biologie.pdf} & M. Dahan & & \\
+  \url{http://ressources.agreg.phys.ens.fr/media/ressources/RessourceFichiers/11-Maxime_Dahan_-_Microscopie_pour_la_biologie.pdf} & M. Dahan & Vraiment bien & \\
   \hline
   \url{https://www.nikonsmallworld.com/} & Nikon & &    \\
   \hline 
@@ -39,13 +39,16 @@
   \textbf{Niveau choisi pour la leçon :} 
   \newline
   \textbf{Prérequis} : \begin{itemize}
+      \item Optique géométrique : lentilles, construction images par une lentille
+      \item Diffraction par un cercle
       \item 
   \end{itemize}
 
   \textbf{Déroulé détaillé de la leçon: }  
   
   \section*{Introduction}
-  L'homme a voulu voler, voir loin dans l'Univers mais aussi voir l'infiniment petit.
+  L'homme a voulu voler, voir loin dans l'Univers mais aussi voir l'infiniment petit.\\
+  On appelle micrsocopie l'ensemble des techniques permettant de rendre discernables et visuels des objets indiscernables à l'\oe il nu (environ 1 minute d'arc = $0.017\degree$ pour une vision 10/10 soit environ 100km de la surface de la Lune). 
 
   \section{Le microscope \og d'autrefois \fg }
 
@@ -69,10 +72,9 @@
       \item fixer l'écran à la distance focale de la lentille,
       \item ajuster le microscope pour avoir une image nette sur l'écran
   \end{itemize} 
-  On mesure $\alpha'= \frac{Taille-objet-sur-l'écran}{distance-objet-écran}$ ainsi que les incertitudes associées. En préparation, j'ai trouvé $G_{com}=40.5(3)$ à comparer à 40. Bon ordre de grandeur, la valeur peut-être différente de 40, le microscope ne coûte pas cher donc pas d'incertitudes sur la valeur du constructeur.
-
+ On mesure $\alpha'= \frac{Taille-objet-sur-l'écran}{distance-objet-écran}$ ainsi que les incertitudes associées. 
+ \importantbox{On doit faire des traits bien droits pour la mesure de la distance à l'écran. Pour cela, prendre une feuille et la coller à l'écran, reproduire les traits sur la feuille. Faire la mesure à la règle proprement sur la feuille en traçant des angles droits.} En préparation, j'ai trouvé $G_{com}=40.5(3)$ à comparer à 40. Bon ordre de grandeur, la valeur peut-être différente de 40, le microscope ne coûte pas cher et pas d'incertitudes sur la valeur du constructeur.\\
   
-  \subsection{Limitations}
   Parler de : 
   \begin{itemize}
       \item conditions d'éclairement (éclairage Köhler
@@ -81,14 +83,21 @@
       \item microscopie plein champ/ point par point
   \end{itemize}
 
+  \subsection{Eclairage de Köhler}
+  
+  \textbf{Transition :} on va voir comment améliorer le microscope classique
+
+
   \section{Contraste et résolution}
 
-  \subsection{Résolution}
+  \subsection{Résolution verticale : profondeur de champ}
   
+  \subsection{Résolution latéral : critère de Rayleigh}
 
-\textbf{Transition :} on va voir comment améliorer le microscope classique
+\section{Microscopie à contraste de phase}
+Cette technique s'intéresse en particulier à des échantillons transparents dont les épaisseurs sont faibles \textcolor{green}{Slide photos avec ou sans contraste de phase + photos microscopies Nikon}. Elle a valu le prix Nobel à Frederik Zernike en 1953.
+\subsection{Principe}
 
-\section{Microscopie confocal}
 
 \section*{Ouverture}
 Microscopie électronique par effet tunnel
