--- a/LP_TransitionPhase.tex
+++ b/LP_TransitionPhase.tex
@@ -41,13 +41,14 @@
   \textbf{Déroulé détaillé de la leçon: }  
   
   \section*{Introduction}
-Faire une accroche phénoménologique. Comment décrire l'eau qui bout ? Pourquoi la température reste constante ? Pourquoi c'est la même chose pour l'eau qui gèle ? Est-ce que c'est la même chose pour toutes les transitions de phase ?
+Faire une accroche phénoménologique. Comment décrire l'eau qui bout ? Pourquoi la température reste constante ? Pourquoi c'est la même chose pour l'eau qui gèle ? Est-ce que c'est la même chose pour toutes les transitions de phase ? Définir une phase.
 
-  \section{Transition de phase du 1er ordre}
+  \section{Règle des phases}
 
+  \subsection{Diagramme (P,T) de l'eau}
   
   \subsection{Description du phénomène}
-
+  
   
   \section{Etude du diagramme (P,V) de l'eau/azote}
   
