--- a/Leçon_chimie/LC_Avancement.tex
+++ b/Leçon_chimie/LC_Avancement.tex
@@ -71,7 +71,7 @@ Code couleur pour les manips :
   \hline
   \textbf{Réactivité des dérivés d'acide} & Montage Dean-Stark & \textcolor{green}{Synthèse arôme de banane}  & Terminale SPCL \\
   \hline
-  \textbf{Electrolyse, électrosynthèse} & Réaliser une électrolyse à anode soluble & \textcolor{red}{Elec à anode soluble}- Florence Porteu-de-Buchère - Dunod p190 & Terminale SPCL \\
+  \textbf{Electrolyse, électrosynthèse} & Réaliser une électrolyse à anode soluble & \textcolor{green}{Elec à anode soluble}- Florence Porteu-de-Buchère - Dunod p190 & Terminale SPCL \\
   \hline
 \end{tabularx}
 \end{changemargin}
