--- a/main.tex
+++ b/main.tex
@@ -119,7 +119,7 @@
 \newpage
 \input{LP_PropagationGuidee.tex}
 \newpage
-\input{LP_Microscospie.tex}
+\input{LP_Microscopie/LP_Microscospie.tex}
 \newpage
 \input{LP_InterferencesDeuxOndes}
 \newpage
